latest update for my project

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="about"></section>
       </main>
 
-      <div class="footer"></div>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
