fix error coffeeshop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            class="nav_logo"
+            class="nav__logo"
             src="./images/logo_coffeeshop_dark.svg"
             alt="Coffeshop logo"
           />
@@ -87,6 +87,7 @@
             <div class="recipes__videos">
               <div>
                 <iframe
+                  class="recipes__iframe"
                   width="480"
                   height="273"
                   src="https://www.youtube.com/embed/j6VlT_jUVPc"
@@ -101,6 +102,7 @@
               </div>
               <div>
                 <iframe
+                  class="recipes__iframe"
                   width="480"
                   height="273"
                   src="https://www.youtube.com/embed/st571DYYTR8"
