--- a/index.html
+++ b/index.html
@@ -119,7 +119,57 @@
           </div>
         </section>
 
-        <section class="reservation" id="book-table"></section>
+        <section class="reservation" id="book-table">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label">Name *</label>
+              <input
+                type="text"
+                placeholder="Name Surname"
+                id="name"
+                class="form__input"
+              />
+
+              <label for="guest-num" class="form__label"
+                >Number of guest *</label
+              >
+              <input
+                type="number"
+                min="1"
+                max="8"
+                id="guest-num"
+                placeholder="1-8"
+                class="form__input"
+              />
+
+              <label for="date-time" class="form__label">Date & time *</label>
+              <input
+                type="datetime-local"
+                placeholder="mm/dd/yyyy"
+                id="date-time"
+                class="form__input"
+              />
+
+              <label for="email" class="form__label">Your email *</label>
+              <input
+                type="email"
+                placeholder="email@email.com"
+                id="email"
+                class="form__input"
+              />
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <button type="submit" class="form__button">Book a table</button>
+            </fieldset>
+            <fieldset class="form__fieldset form__fieldset_checkbox">
+              <label for="i-agree" class="form__label"
+                >I agree with the terms of use</label
+              >
+              <input type="checkbox" class="form__checkbox" id="i-agree" />
+            </fieldset>
+          </form>
+        </section>
 
         <section class="menu" id="menu"></section>
 
