--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <section class="reservation" id="book-table">
           <h2 class="reservation__title">Book a table</h2>
-          <form class="reservation__form">
+          <form class="reservation__form form">
             <fieldset class="form__fieldset">
               <label for="name" class="form__label">Name *</label>
               <input
@@ -144,12 +144,7 @@
               />
 
               <label for="date-time" class="form__label">Date & time *</label>
-              <input
-                type="datetime-local"
-                placeholder="mm/dd/yyyy"
-                id="date-time"
-                class="form__input"
-              />
+              <input type="datetime-local" id="date-time" class="form__input" />
 
               <label for="email" class="form__label">Your email *</label>
               <input
