--- a/index.html
+++ b/index.html
@@ -270,43 +270,42 @@
             </p>
           </div>
           <div class="about__circle"></div>
-          <div
-            class="about__circle_static about__circle_animation_blurred"
-          ></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
 
-      <footer class="footer" id="contacts">
+      <footer class="footer">
         <div class="footer__content">
           <img
             class="footer__logo"
             src="./images/logo_coffeeshop_light.svg"
             alt="coffe shop logo"
           />
-
-          <ul class="footer__list">
-            <p class="footer__social-heading">Social media</p>
-            <li class="footer__list-item">
-              <img
-                class="footer__social-icon"
-                src="./images/facebook_white.svg"
-                alt="facebook icon"
-              />
-              <a class="footer__social-link" href="https://facebook.com"
-                >Facebook</a
-              >
-            </li>
-            <li class="footer__list-item">
-              <img
-                class="footer__social-icon"
-                src="./images/instagram_white.svg"
-                alt="instagram icon"
-              />
-              <a class="footer__social-link" href="https://instagram.com"
-                >Instagram</a
-              >
-            </li>
-          </ul>
+          <div>
+            <h3 class="footer__social-heading">Social media</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="./images/facebook_white.svg"
+                  alt="facebook icon"
+                />
+                <a class="footer__social-link" href="https://facebook.com"
+                  >Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="instagram icon"
+                />
+                <a class="footer__social-link" href="https://instagram.com"
+                  >Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
         <p class="footer__copyright">&copy; Hassan Porter 2023</p>
       </footer>
