--- a/index.html
+++ b/index.html
@@ -289,8 +289,7 @@
                     class="footer__social-icon"
                     src="./images/facebook_white.svg"
                     alt="facebook icon"
-                  />Facebook</a
-                >
+                  />Facebook</a>
               </li>
               <li class="footer__list-item">
 
