--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
               />
 
               <label for="date-time" class="form__label">Date & time *</label>
-              <input type="datetime-local" id="date-time" class="form__input" required />
+              <input
+                type="datetime-local"
+                id="date-time"
+                class="form__input"
+                required
+              />
 
               <label for="email" class="form__label">Your email *</label>
               <input
@@ -158,9 +163,13 @@
             </fieldset>
             <fieldset class="form__fieldset">
               <label for="i-agree" class="form__label form__label_type_checkbox"
-                ><input type="checkbox" class="form__checkbox" id="i-agree" required  />I agree with the terms of use</label
+                ><input
+                  type="checkbox"
+                  class="form__checkbox"
+                  id="i-agree"
+                  required
+                />I agree with the terms of use</label
               >
-
             </fieldset>
           </form>
         </section>
@@ -284,21 +293,21 @@
             <h3 class="footer__social-heading">Social media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
-                <a class="footer__social-link" href="https://facebook.com"></a>
-                  <img
+                <a class="footer__social-link" href="https://facebook.com"
+                  ><img
                     class="footer__social-icon"
                     src="./images/facebook_white.svg"
                     alt="facebook icon"
-                  />Facebook</a>
+                  />Facebook</a
+                >
               </li>
               <li class="footer__list-item">
-
-                <a class="footer__social-link" href="https://instagram.com"
-                  > <img
-                  class="footer__social-icon"
-                  src="./images/instagram_white.svg"
-                  alt="instagram icon"
-                />Instagram</a
+                <a class="footer__social-link" href="https://instagram.com">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="instagram icon"
+                  />Instagram</a
                 >
               </li>
             </ul>
